--- a/posts/AI/natural-language-processing.mdx
+++ b/posts/AI/natural-language-processing.mdx
@@ -1,10 +1,10 @@
 ---
 title: "Natural Language Processing: Understanding Text with AI"
 description: "Master Natural Language Processing from basics to transformers. Learn text preprocessing, embeddings, sentiment analysis, and modern NLP with Hugging Face."
-date: "2025-11-12"
+date: "2025-09-15"
 author: "Tech Blogger"
 tags: ["NLP", "AI", "Text Processing", "Transformers"]
-image: "/images/nlp-transformers.jpg"
+image: "/images/nlp-transformers.svg"
 readTime: "11 min read"
 ---
 
