--- a/posts/Coding/css-grid-vs-flexbox.mdx
+++ b/posts/Coding/css-grid-vs-flexbox.mdx
@@ -1,10 +1,10 @@
 ---
 title: "CSS Grid vs Flexbox: When to Use What"
 description: "Master the differences between CSS Grid and Flexbox with practical examples, use cases, and decision-making guidelines for modern web layouts."
-date: "2025-10-28"
+date: "2025-08-28"
 author: "Tech Blogger"
 tags: ["CSS", "Web Development", "Design"]
-image: "/images/css-grid-flexbox.jpg"
+image: "/images/css-grid-flexbox.svg"
 readTime: "6 min read"
 ---
 
