--- a/posts/Coding/graphql-introduction.mdx
+++ b/posts/Coding/graphql-introduction.mdx
@@ -1,10 +1,10 @@
 ---
 title: "Introduction to GraphQL: Better APIs for Modern Apps"
 description: "Learn GraphQL fundamentals, advantages over REST, and practical implementation strategies for building efficient, flexible APIs."
-date: "2025-10-22"
+date: "2025-08-22"
 author: "Tech Blogger"
 tags: ["GraphQL", "API", "JavaScript"]
-image: "/images/graphql-intro.jpg"
+image: "/images/graphql-intro.svg"
 readTime: "11 min read"
 ---
 
