--- a/posts/Coding/nodejs-express-apis.mdx
+++ b/posts/Coding/nodejs-express-apis.mdx
@@ -1,10 +1,10 @@
 ---
 title: "Building RESTful APIs with Node.js and Express"
 description: "Learn to build robust, scalable REST APIs with Node.js and Express, covering authentication, validation, error handling, and production best practices."
-date: "2025-11-05"
+date: "2025-08-15"
 author: "Tech Blogger"
 tags: ["Node.js", "API", "Backend"]
-image: "/images/nodejs-express.jpg"
+image: "/images/nodejs-express.svg"
 readTime: "9 min read"
 ---
 
