--- a/posts/Coding/react-server-components.mdx
+++ b/posts/Coding/react-server-components.mdx
@@ -1,10 +1,10 @@
 ---
 title: "React Server Components: The Future of React Apps"
 description: "Explore React Server Components (RSC), their benefits for performance and developer experience, and how they're reshaping modern React architecture."
-date: "2025-11-10"
+date: "2025-08-10"
 author: "Tech Blogger"
 tags: ["React", "JavaScript", "Performance"]
-image: "/images/react-server-components.jpg"
+image: "/images/react-server-components.svg"
 readTime: "10 min read"
 ---
 
