Remove duplicate key takeaways in ML guide

--- a/posts/ML/ml-complete-guide-part-1.mdx
+++ b/posts/ML/ml-complete-guide-part-1.mdx
@@ -574,13 +574,13 @@ You've learned the fundamentals! In the next parts:
 
 ## Key Takeaways
 
-✅ ML teaches computers to learn from data
-✅ Supervised learning uses labeled data
-✅ Unsupervised learning finds patterns in unlabeled data
-✅ Always split data into train/test sets
-✅ Start simple (don't use deep learning for everything)
-✅ Data quality matters more than algorithm choice
-✅ Practice with real datasets (Kaggle, UCI ML Repository)
+- ML teaches computers to learn from data
+- Supervised learning uses labeled data
+- Unsupervised learning finds patterns in unlabeled data
+- Always split data into train/test sets
+- Start simple (don't use deep learning for everything)
+- Data quality matters more than algorithm choice
+- Practice with real datasets (Kaggle, UCI ML Repository)
 
 **Practice daily and you'll be interview-ready!** 🚀
 
